Overlapping DIV fix on mobile
Removed the 100vh on the feature div

--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ li .donateLink {
 }
 
 .featured {
-	height:100vh;
+	/**height:100vh;**/
 	background-color: #fff;
 }
 
